# rfcbot-rs

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Procfile  README.md  RESPONSES.md  RFCBOT.md  Vagrantfile  bootstrap.sql  build.sh  diesel.toml  docker-compose.yml  githubuser-backup.pg  install-ubuntu.sh  nags-potential.sql  queries.sql  rfcbot.toml  rust-toolchain  rustfmt.toml  setup-db.sh  teams.toml  update-full-backup.sh  update-users-backup.sh
front/: README.md  bower.json  ember-cli-build.js  package.json
front/app/: index.html  router.js
front/config/: environment.js
front/public/: hackers.txt  humans.txt
front/tests/: index.html
migrations/20160415154429_create_user_table/: down.sql  up.sql
migrations/20160417224117_create_milestone_table/: down.sql  up.sql
migrations/20160417224917_create_issue_table/: down.sql  up.sql
migrations/20160417225849_create_issuecomment_table/: down.sql  up.sql
migrations/20160419204532_create_pullrequest_table/: down.sql  up.sql
migrations/20160420095519_add_label_column_to_issue/: down.sql  up.sql
migrations/20160420100204_drop_issuelabel_table/: down.sql  up.sql
migrations/20160420145731_crate_release_table/: down.sql  up.sql
migrations/20160424231342_create_build_table/: down.sql  up.sql
migrations/20160428102809_add_time_columns_to_build/: down.sql  up.sql
migrations/20160609190917_add_repo_column/: down.sql  up.sql
migrations/20160618122138_move_prs_new_table/: down.sql  up.sql
migrations/20160618145712_move_issues_new_table/: down.sql  up.sql
migrations/20160622001838_inital_teams/: down.sql  up.sql
migrations/20160815231501_set_memberships_not_null/: down.sql  up.sql
migrations/20160817191919_add_rfcbot_tables/: down.sql  up.sql
migrations/20160831021835_add_bot_tracking_comment/: down.sql  up.sql
migrations/20160831023417_change_review_request_to_bool/: down.sql  up.sql
migrations/20160831215112_fcp_fields_start_closed/: down.sql  up.sql
migrations/20160903192436_update_teams/: down.sql  up.sql
migrations/20160917164551_concern_initiating_comment/: down.sql  up.sql
rust-dashboard/DEBIAN/: control
src/: buildbot.rs  config.rs  error.rs  fix.rs  macros.rs  main.rs  nag.rs  releases.rs  scraper.rs  server.rs  teams.rs  utils.rs
vagrant/: bootstrap.sh  frontend.sh  native_deps.sh  pg_hba.conf  postgres.sh  rust.sh  vagrant_env.sh
(+134 files in other folders)
