[package]
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
name = "rfcbot-rs"
version = "0.1.0"
edition = "2018"

# Sorted by alphanumeric order
[dependencies]
dotenv = "0.14.1"
env_logger = "0.7.0"
hex = "0.4.0"
itertools = "0.10.0"
lazy_static = "1.2.0"
log = "0.4.6"
maplit = "1.0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", features = ["json", "handlebars_templates"] }
openssl = "0.10"
serde = "1.0.59"
serde_derive = "1.0.59"
serde_json = "1.0"
toml = "0.5.3"
url = "2.1.0"
urlencoded = "0.6.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.diesel]
default-features = false
features = ["postgres", "chrono", "r2d2", "32-column-tables"]
version = "1.4.1"
